kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kwet-service
  labels:
    app: kwet-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kwet-service
  template:
    metadata:
      labels:
        app: kwet-service
    spec:
      containers:
        - name: kwet-service
          image: s6individualproject/kwet-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
